Solrify tale of two queries

--- a/tale-of-two-queries (ES).ipynb
+++ b/tale-of-two-queries (ES).ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -202,14 +202,14 @@
       "Indexed 17200 movies (last The Ballad of Ramblin' Jack)\n",
       "Indexed 17300 movies (last Blade of the Ripper)\n",
       "Indexed 17400 movies (last Kiler)\n",
-      "Indexed 17500 movies (last Kaïrat)\n",
-      "Indexed 17600 movies (last Body Bags)\n"
+      "Indexed 17500 movies (last Kaïrat)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Indexed 17600 movies (last Body Bags)\n",
       "Indexed 17700 movies (last Dave Attell: Captain Miserable)\n",
       "Indexed 17800 movies (last Wodehouse In Exile)\n",
       "Indexed 17900 movies (last Duel in the Sun)\n",
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -387,18 +387,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Uncomment this line to see the judgments\n",
-    "# \n",
-    "# for judgment in judgments:\n",
-    "#    print(judgment.toRanklibFormat())"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -414,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -599,35 +587,35 @@
      "text": [
       "{\"size\": 5, \"query\": {\"sltr\": {\"params\": {\"keywords\": \"drama\"}, \"model\": \"genre\"}}}\n",
       "Searching tmdb - {'size': 5, 'query': [Status: 200]\n",
-      "Transformers: The Last Knight \n",
+      "Guardians of the Galaxy Vol. 2 \n",
       "1.406109 \n",
       "2017 \n",
-      "['Action', 'Science Fiction', 'Thriller', 'Adventure'] \n",
-      "Autobots and Decepticons are at war, with humans on the sidelines. Optimus Prime is gone. The key to saving our future lies buried in the secrets of the past, in the hidden history of Transformers on Earth. \n",
+      "['Action', 'Adventure', 'Comedy', 'Science Fiction'] \n",
+      "The Guardians must fight to keep their newfound family together as they unravel the mysteries of Peter Quill's true parentage. \n",
       "---------------------------------------\n",
-      "Life \n",
-      "1.406109 \n",
-      "2017 \n",
-      "['Horror', 'Science Fiction', 'Thriller'] \n",
-      "The six-member crew of the International Space Station is tasked with studying a sample from Mars that may be the first proof of extra-terrestrial life, which proves more intelligent than ever expected. \n",
-      "---------------------------------------\n",
-      "Monster Trucks \n",
+      "Rogue One: A Star Wars Story \n",
       "1.406109 \n",
       "2016 \n",
-      "['Action', 'Comedy', 'Science Fiction'] \n",
-      "Looking for any way to get away from the life and town he was born into, Tripp, a high school senior, builds a Monster Truck from bits and pieces of scrapped cars. After an accident at a nearby oil-drilling site displaces a strange and subterranean creature with a taste and a talent for speed, Tripp may have just found the key to getting out of town and a most unlikely friend. \n",
+      "['Adventure', 'Science Fiction', 'Action'] \n",
+      "A rogue band of resistance fighters unite for a mission to steal the Death Star plans and bring a new hope to the galaxy. \n",
       "---------------------------------------\n",
-      "ARQ \n",
+      "The 5th Wave \n",
       "1.406109 \n",
       "2016 \n",
-      "['Science Fiction', 'Thriller'] \n",
-      "Two old friends living in a dystopic future become trapped in a mysterious time loop — one that may have something to do with an ongoing battle between an omnipotent corporation and a ragtag band of rebels. \n",
+      "['Adventure', 'Science Fiction'] \n",
+      "16-year-old Cassie Sullivan tries to survive in a world devastated by the waves of an alien invasion that has already decimated the population and knocked mankind back to the Stone Age. \n",
       "---------------------------------------\n",
-      "Resident Evil: The Final Chapter \n",
+      "Assassin's Creed \n",
       "1.406109 \n",
       "2016 \n",
-      "['Action', 'Horror', 'Science Fiction'] \n",
-      "Picking up immediately after the events in Resident Evil: Retribution, Alice (Milla Jovovich) is the only survivor of what was meant to be humanity's final stand against the undead. Now, she must return to where the nightmare began - The Hive in Raccoon City, where the Umbrella Corporation is gathering its forces for a final strike against the only remaining survivors of the apocalypse. \n",
+      "['Adventure', 'Action', 'Science Fiction'] \n",
+      "Through unlocked genetic memories that allow him to relive the adventures of his ancestor in 15th century Spain, Callum Lynch discovers he's a descendant of the secret 'Assassins' society. After gaining incredible knowledge and skills, he is now poised to take on the oppressive Knights Templar in the present day. \n",
+      "---------------------------------------\n",
+      "Ratchet & Clank \n",
+      "1.406109 \n",
+      "2016 \n",
+      "['Action', 'Adventure', 'Animation', 'Comedy', 'Family', 'Science Fiction'] \n",
+      "Ratchet and Clank tells the story of two unlikely heroes as they struggle to stop a vile alien named Chairman Drek from destroying every planet in the Solana Galaxy. When the two stumble upon a dangerous weapon capable of destroying entire planets, they must join forces with a team of colorful heroes called The Galactic Rangers in order to save the galaxy. Along the way they'll learn about heroism, friendship, and the importance of discovering one's own identity. \n",
       "---------------------------------------\n"
      ]
     }
@@ -657,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -756,17 +744,17 @@
       "['Comedy', 'Drama'] \n",
       "Charlie is an immigrant who endures a challenging voyage and gets into trouble as soon as he arrives in America. \n",
       "---------------------------------------\n",
-      "Dr. Jekyll and Mr. Hyde \n",
-      "1.3828127 \n",
-      "1920 \n",
-      "['Drama', 'Horror', 'Science Fiction'] \n",
-      "Dr. Jekyll and Mr. Hyde is a 1920 horror silent film based upon Robert Louis Stevenson's novella The Strange Case of Dr Jekyll and Mr Hyde and starring actor John Barrymore. \n",
-      "---------------------------------------\n",
       "The Cabinet of Dr. Caligari \n",
       "1.3828127 \n",
       "1920 \n",
       "['Drama', 'Horror', 'Thriller', 'Crime'] \n",
       "The Cabinet of Dr. Caligari is eerie and expressionistic, silent and surreal. It has become not only a classic of German Expressionist cinema, but a landmark in film history, with creative scenery and an unusual ending. \n",
+      "---------------------------------------\n",
+      "Dr. Jekyll and Mr. Hyde \n",
+      "1.3828127 \n",
+      "1920 \n",
+      "['Drama', 'Horror', 'Science Fiction'] \n",
+      "Dr. Jekyll and Mr. Hyde is a 1920 horror silent film based upon Robert Louis Stevenson's novella The Strange Case of Dr Jekyll and Mr Hyde and starring actor John Barrymore. \n",
       "---------------------------------------\n",
       "The Last of the Mohicans \n",
       "1.3828127 \n",
@@ -780,6 +768,55 @@
    "source": [
     "from ltr.search import search\n",
     "search(client, keywords=\"drama\", modelName=\"genre\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"size\": 5, \"query\": {\"sltr\": {\"params\": {\"keywords\": \"science fiction\"}, \"model\": \"genre\"}}}\n",
+      "Searching tmdb - {'size': 5, 'query': [Status: 200]\n",
+      "Guardians of the Galaxy Vol. 2 \n",
+      "1.406109 \n",
+      "2017 \n",
+      "['Action', 'Adventure', 'Comedy', 'Science Fiction'] \n",
+      "The Guardians must fight to keep their newfound family together as they unravel the mysteries of Peter Quill's true parentage. \n",
+      "---------------------------------------\n",
+      "Rogue One: A Star Wars Story \n",
+      "1.406109 \n",
+      "2016 \n",
+      "['Adventure', 'Science Fiction', 'Action'] \n",
+      "A rogue band of resistance fighters unite for a mission to steal the Death Star plans and bring a new hope to the galaxy. \n",
+      "---------------------------------------\n",
+      "The 5th Wave \n",
+      "1.406109 \n",
+      "2016 \n",
+      "['Adventure', 'Science Fiction'] \n",
+      "16-year-old Cassie Sullivan tries to survive in a world devastated by the waves of an alien invasion that has already decimated the population and knocked mankind back to the Stone Age. \n",
+      "---------------------------------------\n",
+      "Assassin's Creed \n",
+      "1.406109 \n",
+      "2016 \n",
+      "['Adventure', 'Action', 'Science Fiction'] \n",
+      "Through unlocked genetic memories that allow him to relive the adventures of his ancestor in 15th century Spain, Callum Lynch discovers he's a descendant of the secret 'Assassins' society. After gaining incredible knowledge and skills, he is now poised to take on the oppressive Knights Templar in the present day. \n",
+      "---------------------------------------\n",
+      "Ratchet & Clank \n",
+      "1.406109 \n",
+      "2016 \n",
+      "['Action', 'Adventure', 'Animation', 'Comedy', 'Family', 'Science Fiction'] \n",
+      "Ratchet and Clank tells the story of two unlikely heroes as they struggle to stop a vile alien named Chairman Drek from destroying every planet in the Solana Galaxy. When the two stumble upon a dangerous weapon capable of destroying entire planets, they must join forces with a team of colorful heroes called The Galactic Rangers in order to save the galaxy. Along the way they'll learn about heroism, friendship, and the importance of discovering one's own identity. \n",
+      "---------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "from ltr.search import search\n",
+    "search(client, keywords=\"science fiction\", modelName=\"genre\")"
    ]
   },
   {
