--- a/hello-ltr (ES).ipynb
+++ b/hello-ltr (ES).ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,35 +80,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Deleted index tmdb [Status: 404]\n",
-      "{\n",
-      "  \"error\": {\n",
-      "    \"root_cause\": [\n",
-      "      {\n",
-      "        \"type\": \"index_not_found_exception\",\n",
-      "        \"reason\": \"no such index\",\n",
-      "        \"resource.type\": \"index_or_alias\",\n",
-      "        \"resource.id\": \"tmdb\",\n",
-      "        \"index_uuid\": \"_na_\",\n",
-      "        \"index\": \"tmdb\"\n",
-      "      }\n",
-      "    ],\n",
-      "    \"type\": \"index_not_found_exception\",\n",
-      "    \"reason\": \"no such index\",\n",
-      "    \"resource.type\": \"index_or_alias\",\n",
-      "    \"resource.id\": \"tmdb\",\n",
-      "    \"index_uuid\": \"_na_\",\n",
-      "    \"index\": \"tmdb\"\n",
-      "  },\n",
-      "  \"status\": 404\n",
-      "}\n",
+      "Deleted index tmdb [Status: 200]\n",
       "Created index tmdb [Status: 200]\n",
       "Reindexing...\n",
       "Indexed 0 movies (last Black Mirror: White Christmas)\n",
@@ -285,13 +264,7 @@
       "Indexed 17100 movies (last Love Bites)\n",
       "Indexed 17200 movies (last The Ballad of Ramblin' Jack)\n",
       "Indexed 17300 movies (last Blade of the Ripper)\n",
-      "Indexed 17400 movies (last Kiler)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Indexed 17400 movies (last Kiler)\n",
       "Indexed 17500 movies (last Kaïrat)\n",
       "Indexed 17600 movies (last Body Bags)\n",
       "Indexed 17700 movies (last Dave Attell: Captain Miserable)\n",
@@ -300,7 +273,13 @@
       "Indexed 18000 movies (last The Message)\n",
       "Indexed 18100 movies (last Shock)\n",
       "Indexed 18200 movies (last Harvey)\n",
-      "Indexed 18300 movies (last The Worthless)\n",
+      "Indexed 18300 movies (last The Worthless)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Indexed 18400 movies (last Queen of the Mountains)\n",
       "Indexed 18500 movies (last Urgh! A Music War)\n",
       "Indexed 18600 movies (last Wuthering Heights)\n",
@@ -418,15 +397,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Removed Default LTR feature store [Status: 404]\n",
-      "{\"error\":{\"root_cause\":[{\"type\":\"index_not_found_exception\",\"reason\":\"no such index\",\"resource.type\":\"index_or_alias\",\"resource.id\":\".ltrstore\",\"index_uuid\":\"_na_\",\"index\":\".ltrstore\"}],\"type\":\"index_not_found_exception\",\"reason\":\"no such index\",\"resource.type\":\"index_or_alias\",\"resource.id\":\".ltrstore\",\"index_uuid\":\"_na_\",\"index\":\".ltrstore\"},\"status\":404}\n",
+      "Removed Default LTR feature store [Status: 200]\n",
       "Initialize Default LTR feature store [Status: 200]\n",
       "Create release feature set [Status: 201]\n"
      ]
@@ -469,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -503,18 +481,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running java -jar data/RankyMcRankFace.jar -ranker 6 -metric2t DCG@10 -tree 10 -leaf 10 -train data/latest-training.txt -save data/latest_model.txt \n",
+      "Running java -jar data/RankyMcRankFace.jar -ranker 6 -metric2t DCG@10 -tree 10 -leaf 50 -train data/latest-training.txt -save data/latest_model.txt \n",
       "DONE\n",
       "Delete model latest: 404\n",
       "Created Model latest [Status: 201]\n",
-      "Running java -jar data/RankyMcRankFace.jar -ranker 6 -metric2t DCG@10 -tree 10 -leaf 10 -train data/classic-training.txt -save data/classic_model.txt \n",
+      "Running java -jar data/RankyMcRankFace.jar -ranker 6 -metric2t DCG@10 -tree 10 -leaf 50 -train data/classic-training.txt -save data/classic_model.txt \n",
       "DONE\n",
       "Delete model classic: 404\n",
       "Created Model classic [Status: 201]\n"
@@ -523,10 +501,10 @@
     {
      "data": {
       "text/plain": [
-       "<ltr.helpers.ranklib_result.TrainingLog at 0x136b165f8>"
+       "<ltr.helpers.ranklib_result.TrainingLog at 0x1086717f0>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +561,7 @@
          "mode": "lines",
          "name": "classic",
          "type": "scatter",
-         "uid": "594de9aa-8983-4e91-bb02-4d2e5c1b8a37",
+         "uid": "5bcd88fa-89f3-44ae-b110-6b1ac2a2f6dd",
          "x": [
           0,
           1,
@@ -617,43 +595,43 @@
           29
          ],
          "y": [
-          "1943",
           "1949",
+          "1943",
           "1966",
-          "1992",
           "1989",
-          "2013",
-          "2013",
-          "2012",
-          "2011",
-          "2005",
-          "2003",
-          "1998",
-          "1998",
-          "2008",
           "1997",
+          "1998",
+          "1998",
           "2000",
+          "2008",
+          "2008",
+          "2003",
           "2010",
           "2005",
+          "2005",
           "2010",
-          "2008",
           "2009",
+          "1992",
           "1993",
           "1995",
+          "2013",
+          "2012",
           "2014",
+          "2016",
           "2017",
+          "2011",
           "2014",
+          "2016",
           "2015",
           "2016",
-          "2016",
-          "2016"
+          "2013"
          ]
         },
         {
          "mode": "lines",
          "name": "latest",
          "type": "scatter",
-         "uid": "1a4ea84f-3251-4438-b17e-8481c4418935",
+         "uid": "a160ee6a-5cda-4b5f-9507-9d2e19b3afc7",
          "x": [
           0,
           1,
@@ -700,41 +678,41 @@
           "2012",
           "1995",
           "1993",
-          "2005",
-          "2008",
+          "1992",
           "2010",
           "2005",
+          "2005",
+          "2003",
           "2010",
           "2008",
           "2009",
-          "2003",
-          "1998",
-          "1998",
-          "1997",
+          "2008",
           "2000",
-          "1992",
-          "1949",
-          "1989",
+          "1997",
+          "1998",
+          "1998",
+          "1943",
           "1966",
-          "1943"
+          "1949",
+          "1989"
          ]
         }
        ],
        "layout": {}
       },
       "text/html": [
-       "<div id=\"dc9aac4c-503d-46b6-9d7f-74ef96dd2753\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
-       "if (document.getElementById(\"dc9aac4c-503d-46b6-9d7f-74ef96dd2753\")) {\n",
-       "    Plotly.newPlot(\"dc9aac4c-503d-46b6-9d7f-74ef96dd2753\", [{\"mode\": \"lines\", \"name\": \"classic\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [\"1943\", \"1949\", \"1966\", \"1992\", \"1989\", \"2013\", \"2013\", \"2012\", \"2011\", \"2005\", \"2003\", \"1998\", \"1998\", \"2008\", \"1997\", \"2000\", \"2010\", \"2005\", \"2010\", \"2008\", \"2009\", \"1993\", \"1995\", \"2014\", \"2017\", \"2014\", \"2015\", \"2016\", \"2016\", \"2016\"], \"type\": \"scatter\", \"uid\": \"594de9aa-8983-4e91-bb02-4d2e5c1b8a37\"}, {\"mode\": \"lines\", \"name\": \"latest\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [\"2014\", \"2014\", \"2016\", \"2016\", \"2016\", \"2017\", \"2011\", \"2013\", \"2013\", \"2015\", \"2012\", \"1995\", \"1993\", \"2005\", \"2008\", \"2010\", \"2005\", \"2010\", \"2008\", \"2009\", \"2003\", \"1998\", \"1998\", \"1997\", \"2000\", \"1992\", \"1949\", \"1989\", \"1966\", \"1943\"], \"type\": \"scatter\", \"uid\": \"1a4ea84f-3251-4438-b17e-8481c4418935\"}], {}, {\"showLink\": false, \"linkText\": \"Export to plot.ly\", \"plotlyServerURL\": \"https://plot.ly\"}); \n",
+       "<div id=\"24b19004-4202-4dbb-859c-97ffe4f502e8\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
+       "if (document.getElementById(\"24b19004-4202-4dbb-859c-97ffe4f502e8\")) {\n",
+       "    Plotly.newPlot(\"24b19004-4202-4dbb-859c-97ffe4f502e8\", [{\"mode\": \"lines\", \"name\": \"classic\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [\"1949\", \"1943\", \"1966\", \"1989\", \"1997\", \"1998\", \"1998\", \"2000\", \"2008\", \"2008\", \"2003\", \"2010\", \"2005\", \"2005\", \"2010\", \"2009\", \"1992\", \"1993\", \"1995\", \"2013\", \"2012\", \"2014\", \"2016\", \"2017\", \"2011\", \"2014\", \"2016\", \"2015\", \"2016\", \"2013\"], \"type\": \"scatter\", \"uid\": \"5bcd88fa-89f3-44ae-b110-6b1ac2a2f6dd\"}, {\"mode\": \"lines\", \"name\": \"latest\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [\"2014\", \"2014\", \"2016\", \"2016\", \"2016\", \"2017\", \"2011\", \"2013\", \"2013\", \"2015\", \"2012\", \"1995\", \"1993\", \"1992\", \"2010\", \"2005\", \"2005\", \"2003\", \"2010\", \"2008\", \"2009\", \"2008\", \"2000\", \"1997\", \"1998\", \"1998\", \"1943\", \"1966\", \"1949\", \"1989\"], \"type\": \"scatter\", \"uid\": \"a160ee6a-5cda-4b5f-9507-9d2e19b3afc7\"}], {}, {\"showLink\": false, \"linkText\": \"Export to plot.ly\", \"plotlyServerURL\": \"https://plot.ly\"}); \n",
        "}\n",
-       "});</script><script type=\"text/javascript\">window.addEventListener(\"resize\", function(){if (document.getElementById(\"dc9aac4c-503d-46b6-9d7f-74ef96dd2753\")) {window._Plotly.Plots.resize(document.getElementById(\"dc9aac4c-503d-46b6-9d7f-74ef96dd2753\"));};})</script>"
+       "});</script><script type=\"text/javascript\">window.addEventListener(\"resize\", function(){if (document.getElementById(\"24b19004-4202-4dbb-859c-97ffe4f502e8\")) {window._Plotly.Plots.resize(document.getElementById(\"24b19004-4202-4dbb-859c-97ffe4f502e8\"));};})</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"dc9aac4c-503d-46b6-9d7f-74ef96dd2753\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
-       "if (document.getElementById(\"dc9aac4c-503d-46b6-9d7f-74ef96dd2753\")) {\n",
-       "    Plotly.newPlot(\"dc9aac4c-503d-46b6-9d7f-74ef96dd2753\", [{\"mode\": \"lines\", \"name\": \"classic\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [\"1943\", \"1949\", \"1966\", \"1992\", \"1989\", \"2013\", \"2013\", \"2012\", \"2011\", \"2005\", \"2003\", \"1998\", \"1998\", \"2008\", \"1997\", \"2000\", \"2010\", \"2005\", \"2010\", \"2008\", \"2009\", \"1993\", \"1995\", \"2014\", \"2017\", \"2014\", \"2015\", \"2016\", \"2016\", \"2016\"], \"type\": \"scatter\", \"uid\": \"594de9aa-8983-4e91-bb02-4d2e5c1b8a37\"}, {\"mode\": \"lines\", \"name\": \"latest\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [\"2014\", \"2014\", \"2016\", \"2016\", \"2016\", \"2017\", \"2011\", \"2013\", \"2013\", \"2015\", \"2012\", \"1995\", \"1993\", \"2005\", \"2008\", \"2010\", \"2005\", \"2010\", \"2008\", \"2009\", \"2003\", \"1998\", \"1998\", \"1997\", \"2000\", \"1992\", \"1949\", \"1989\", \"1966\", \"1943\"], \"type\": \"scatter\", \"uid\": \"1a4ea84f-3251-4438-b17e-8481c4418935\"}], {}, {\"showLink\": false, \"linkText\": \"Export to plot.ly\", \"plotlyServerURL\": \"https://plot.ly\"}); \n",
+       "<div id=\"24b19004-4202-4dbb-859c-97ffe4f502e8\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
+       "if (document.getElementById(\"24b19004-4202-4dbb-859c-97ffe4f502e8\")) {\n",
+       "    Plotly.newPlot(\"24b19004-4202-4dbb-859c-97ffe4f502e8\", [{\"mode\": \"lines\", \"name\": \"classic\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [\"1949\", \"1943\", \"1966\", \"1989\", \"1997\", \"1998\", \"1998\", \"2000\", \"2008\", \"2008\", \"2003\", \"2010\", \"2005\", \"2005\", \"2010\", \"2009\", \"1992\", \"1993\", \"1995\", \"2013\", \"2012\", \"2014\", \"2016\", \"2017\", \"2011\", \"2014\", \"2016\", \"2015\", \"2016\", \"2013\"], \"type\": \"scatter\", \"uid\": \"5bcd88fa-89f3-44ae-b110-6b1ac2a2f6dd\"}, {\"mode\": \"lines\", \"name\": \"latest\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [\"2014\", \"2014\", \"2016\", \"2016\", \"2016\", \"2017\", \"2011\", \"2013\", \"2013\", \"2015\", \"2012\", \"1995\", \"1993\", \"1992\", \"2010\", \"2005\", \"2005\", \"2003\", \"2010\", \"2008\", \"2009\", \"2008\", \"2000\", \"1997\", \"1998\", \"1998\", \"1943\", \"1966\", \"1949\", \"1989\"], \"type\": \"scatter\", \"uid\": \"a160ee6a-5cda-4b5f-9507-9d2e19b3afc7\"}], {}, {\"showLink\": false, \"linkText\": \"Export to plot.ly\", \"plotlyServerURL\": \"https://plot.ly\"}); \n",
        "}\n",
-       "});</script><script type=\"text/javascript\">window.addEventListener(\"resize\", function(){if (document.getElementById(\"dc9aac4c-503d-46b6-9d7f-74ef96dd2753\")) {window._Plotly.Plots.resize(document.getElementById(\"dc9aac4c-503d-46b6-9d7f-74ef96dd2753\"));};})</script>"
+       "});</script><script type=\"text/javascript\">window.addEventListener(\"resize\", function(){if (document.getElementById(\"24b19004-4202-4dbb-859c-97ffe4f502e8\")) {window._Plotly.Plots.resize(document.getElementById(\"24b19004-4202-4dbb-859c-97ffe4f502e8\"));};})</script>"
       ]
      },
      "metadata": {},
@@ -772,7 +750,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
