save raw solr commands

--- a/raw-solr-commands.ipynb
+++ b/raw-solr-commands.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,13 +92,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'responseHeader': {'status': 0, 'QTime': 1},\n",
+       "{'responseHeader': {'status': 0, 'QTime': 2},\n",
        " 'features': [{'name': 'title_bm25',\n",
        "   'class': 'org.apache.solr.ltr.feature.SolrFeature',\n",
        "   'params': {'q': 'title:(${keywords})'},\n",
@@ -109,7 +109,7 @@
        "   'store': 'test'}]}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,39 +121,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "First Blood\n"
-     ]
-    }
-   ],
-   "source": [
-    "search = {\n",
-    "    \"query\": { \n",
-    "    \"match\": {\n",
-    "        \"title\": \"First Blood\"\n",
-    "    }}\n",
-    "}\n",
-    "\n",
-    "resp = requests.get('http://localhost:9200/tmdb/_search', json=search).json()\n",
-    "print(resp['hits']['hits'][0]['_source']['title'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'responseHeader': {'status': 0,\n",
-       "  'QTime': 1,\n",
+       "  'QTime': 0,\n",
        "  'params': {'q': 'id:7555 OR id:1370 id:1369 OR id:1368',\n",
        "   'fl': 'id,title,[features store=test efi.keywords=\"rambo\"]',\n",
        "   'rows': '10',\n",
@@ -174,7 +149,7 @@
        "    '[features]': 'title_bm25=12.318474,overview_bm25=10.573916'}]}}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,50 +168,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'store': 'test',\n",
-       " 'name': 'test',\n",
-       " 'class': 'org.apache.solr.ltr.model.MultipleAdditiveTreesModel',\n",
-       " 'features': [{'name': 'title_bm25'}, {'name': 'overview_bm25'}],\n",
-       " 'params': {'trees': [{'weight': '0.1',\n",
-       "    'root': {'feature': 'overview_bm25',\n",
-       "     'threshold': '10.664251',\n",
-       "     'left': {'feature': 'title_bm25',\n",
-       "      'threshold': '0.0',\n",
-       "      'left': {'value': '-1.8305741548538208'},\n",
-       "      'right': {'feature': 'overview_bm25',\n",
-       "       'threshold': '9.502127',\n",
-       "       'left': {'feature': 'title_bm25',\n",
-       "        'threshold': '7.0849166',\n",
-       "        'left': {'value': '0.23645669221878052'},\n",
-       "        'right': {'value': '1.7593677043914795'}},\n",
-       "       'right': {'value': '1.9719607830047607'}}},\n",
-       "     'right': {'feature': 'overview_bm25',\n",
-       "      'threshold': '0.0',\n",
-       "      'left': {'value': '1.3728954792022705'},\n",
-       "      'right': {'feature': 'overview_bm25',\n",
-       "       'threshold': '8.602512',\n",
-       "       'left': {'feature': 'title_bm25',\n",
-       "        'threshold': '0.0',\n",
-       "        'left': {'feature': 'overview_bm25',\n",
-       "         'threshold': '13.815164',\n",
-       "         'left': {'value': '1.9401178359985352'},\n",
-       "         'right': {'value': '1.99532949924469'}},\n",
-       "        'right': {'feature': 'title_bm25',\n",
-       "         'threshold': '11.085816',\n",
-       "         'left': {'value': '2.0'},\n",
-       "         'right': {'value': '1.99308180809021'}}},\n",
-       "       'right': {'value': '1.9870178699493408'}}}}}]}}"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"store\": \"test\",\n",
+      "  \"name\": \"test\",\n",
+      "  \"class\": \"org.apache.solr.ltr.model.MultipleAdditiveTreesModel\",\n",
+      "  \"features\": [\n",
+      "    {\n",
+      "      \"name\": \"title_bm25\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"name\": \"overview_bm25\"\n",
+      "    }\n",
+      "  ],\n",
+      "  \"params\": {\n",
+      "    \"trees\": [\n",
+      "      {\n",
+      "        \"weight\": \"0.1\",\n",
+      "        \"root\": {\n",
+      "          \"feature\": \"overview_bm25\",\n",
+      "          \"threshold\": \"10.664251\",\n",
+      "          \"left\": {\n",
+      "            \"feature\": \"title_bm25\",\n",
+      "            \"threshold\": \"0.0\",\n",
+      "            \"left\": {\n",
+      "              \"value\": \"-1.8305741548538208\"\n",
+      "            },\n",
+      "            \"right\": {\n",
+      "              \"feature\": \"overview_bm25\",\n",
+      "              \"threshold\": \"9.502127\",\n",
+      "              \"left\": {\n",
+      "                \"feature\": \"title_bm25\",\n",
+      "                \"threshold\": \"7.0849166\",\n",
+      "                \"left\": {\n",
+      "                  \"value\": \"0.23645669221878052\"\n",
+      "                },\n",
+      "                \"right\": {\n",
+      "                  \"value\": \"1.7593677043914795\"\n",
+      "                }\n",
+      "              },\n",
+      "              \"right\": {\n",
+      "                \"value\": \"1.9719607830047607\"\n",
+      "              }\n",
+      "            }\n",
+      "          },\n",
+      "          \"right\": {\n",
+      "            \"feature\": \"overview_bm25\",\n",
+      "            \"threshold\": \"0.0\",\n",
+      "            \"left\": {\n",
+      "              \"value\": \"1.3728954792022705\"\n",
+      "            },\n",
+      "            \"right\": {\n",
+      "              \"feature\": \"overview_bm25\",\n",
+      "              \"threshold\": \"8.602512\",\n",
+      "              \"left\": {\n",
+      "                \"feature\": \"title_bm25\",\n",
+      "                \"threshold\": \"0.0\",\n",
+      "                \"left\": {\n",
+      "                  \"feature\": \"overview_bm25\",\n",
+      "                  \"threshold\": \"13.815164\",\n",
+      "                  \"left\": {\n",
+      "                    \"value\": \"1.9401178359985352\"\n",
+      "                  },\n",
+      "                  \"right\": {\n",
+      "                    \"value\": \"1.99532949924469\"\n",
+      "                  }\n",
+      "                },\n",
+      "                \"right\": {\n",
+      "                  \"feature\": \"title_bm25\",\n",
+      "                  \"threshold\": \"11.085816\",\n",
+      "                  \"left\": {\n",
+      "                    \"value\": \"2.0\"\n",
+      "                  },\n",
+      "                  \"right\": {\n",
+      "                    \"value\": \"1.99308180809021\"\n",
+      "                  }\n",
+      "                }\n",
+      "              },\n",
+      "              \"right\": {\n",
+      "                \"value\": \"1.9870178699493408\"\n",
+      "              }\n",
+      "            }\n",
+      "          }\n",
+      "        }\n",
+      "      }\n",
+      "    ]\n",
+      "  }\n",
+      "}\n"
+     ]
     }
    ],
    "source": [
@@ -324,7 +349,7 @@
     "feature_mapping = [{'name': 'title_bm25'}, {'name': 'overview_bm25'}]\n",
     "\n",
     "solr_model = convert(model, 'test', 'test', feature_mapping)\n",
-    "solr_model"
+    "print(json.dumps(solr_model, indent=2))"
    ]
   },
   {
