Add query without rerank

--- a/raw-solr-commands.ipynb
+++ b/raw-solr-commands.ipynb
@@ -2,52 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "import json\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Response [200]>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "requests.delete(\"http://localhost:8983/solr/tmdb/schema/model-store/test\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Response [200]>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "requests.delete(\"http://localhost:8983/solr/tmdb/schema/feature-store/test\")"
    ]
   },
   {
@@ -62,6 +22,46 @@
       ]
      },
      "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "requests.delete(\"http://localhost:8983/solr/tmdb/schema/model-store/test\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "requests.delete(\"http://localhost:8983/solr/tmdb/schema/feature-store/test\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,13 +92,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'responseHeader': {'status': 0, 'QTime': 2},\n",
+       "{'responseHeader': {'status': 0, 'QTime': 11},\n",
        " 'features': [{'name': 'title_bm25',\n",
        "   'class': 'org.apache.solr.ltr.feature.SolrFeature',\n",
        "   'params': {'q': 'title:(${keywords})'},\n",
@@ -109,7 +109,7 @@
        "   'store': 'test'}]}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,26 +121,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'responseHeader': {'status': 0,\n",
-       "  'QTime': 0,\n",
+       "  'QTime': 885,\n",
        "  'params': {'q': 'id:7555 OR id:1370 id:1369 OR id:1368',\n",
        "   'fl': 'id,title,[features store=test efi.keywords=\"rambo\"]',\n",
        "   'rows': '10',\n",
        "   'wt': 'json'}},\n",
        " 'response': {'numFound': 4,\n",
        "  'start': 0,\n",
-       "  'docs': [{'id': '1369',\n",
-       "    'title': ['Rambo: First Blood Part II'],\n",
-       "    '[features]': 'title_bm25=7.010513,overview_bm25=11.220095'},\n",
-       "   {'id': '1370',\n",
+       "  'docs': [{'id': '1370',\n",
        "    'title': ['Rambo III'],\n",
        "    '[features]': 'title_bm25=10.357876,overview_bm25=11.95039'},\n",
+       "   {'id': '1369',\n",
+       "    'title': ['Rambo: First Blood Part II'],\n",
+       "    '[features]': 'title_bm25=7.010513,overview_bm25=11.220095'},\n",
        "   {'id': '1368',\n",
        "    'title': ['First Blood'],\n",
        "    '[features]': 'title_bm25=0.0,overview_bm25=11.220095'},\n",
@@ -149,7 +149,7 @@
        "    '[features]': 'title_bm25=12.318474,overview_bm25=10.573916'}]}}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,34 +375,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'responseHeader': {'status': 0,\n",
-       "  'QTime': 0,\n",
+       "  'QTime': 63,\n",
+       "  'params': {'q': '{!ltr model=test efi.keywords=\"rocky\"}',\n",
+       "   'fl': 'title',\n",
+       "   'rows': '10'}},\n",
+       " 'response': {'numFound': 27760,\n",
+       "  'start': 0,\n",
+       "  'docs': [{'title': ['Oliver!']},\n",
+       "   {'title': ['Bullets Over Broadway']},\n",
+       "   {'title': ['Loose Cannons']},\n",
+       "   {'title': ['Sleeper']},\n",
+       "   {'title': ['Watchmen']},\n",
+       "   {'title': ['Sherlock Holmes']},\n",
+       "   {'title': ['The Hours']},\n",
+       "   {'title': ['Vampire Hunter D: Bloodlust']},\n",
+       "   {'title': ['Biutiful']},\n",
+       "   {'title': ['Melancholia']}]}}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "params = {\n",
+    "    'q': '{!ltr model=test efi.keywords=\\\"rocky\\\"}',\n",
+    "    'rows': 10,\n",
+    "    'fl': 'title'\n",
+    "}\n",
+    "\n",
+    "resp = requests.post('http://localhost:8983/solr/tmdb/select', data=params).json()\n",
+    "resp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'responseHeader': {'status': 0,\n",
+       "  'QTime': 36,\n",
        "  'params': {'q': 'rambo',\n",
        "   'fl': 'title',\n",
        "   'rows': '10',\n",
        "   'wt': 'json',\n",
-       "   'rq': '{!ltr model=test efi.keywords=\"rambo\"}'}},\n",
+       "   'rq': '{!ltr model=test reRankDocs=5 efi.keywords=\"rambo\"}'}},\n",
        " 'response': {'numFound': 13,\n",
        "  'start': 0,\n",
-       "  'docs': [{'title': ['Rambo: First Blood Part II']},\n",
-       "   {'title': ['Rambo III']},\n",
+       "  'docs': [{'title': ['Rambo III']},\n",
+       "   {'title': ['Rambo: First Blood Part II']},\n",
        "   {'title': ['First Blood']},\n",
        "   {'title': ['Rambo']},\n",
-       "   {'title': ['Junior']},\n",
        "   {'title': ['A Hole in the Soul']},\n",
-       "   {'title': ['Zelig']},\n",
+       "   {'title': ['In the Line of Duty: The F.B.I. Murders']},\n",
+       "   {'title': ['Which Way to the Front?']},\n",
        "   {'title': ['Son of Rambow']},\n",
-       "   {'title': ['Go for It']},\n",
-       "   {'title': ['In the Line of Duty: The F.B.I. Murders']}]}}"
+       "   {'title': ['Zelig']},\n",
+       "   {'title': ['Go for It']}]}}"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +454,7 @@
     "params = {\n",
     "    'q': 'rambo',\n",
     "    'rows': 10,\n",
-    "    \"rq\": \"{!ltr model=test efi.keywords=\\\"rambo\\\"}\",\n",
+    "    \"rq\": \"{!ltr model=test reRankDocs=50 efi.keywords=\\\"rambo\\\"}\",\n",
     "    'wt': 'json',\n",
     "    'fl': 'title'\n",
     "}\n",
